--- a/hobbies.html
+++ b/hobbies.html
@@ -13,5 +13,6 @@
         <li>Reading manga/manhwa/manhua</li>
         <li>listening songs/horror podcasts</li>
     </ol>
+    <a href="index.html">Home Page</a>
 </body>
 </html>
