--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,7 @@
         <input type="submit">
 
     </form>
+    <a href="index.html">Home Page</a>
     <!-- <form action="">
         <label for="">Your Name: </label>
         <input type="text">
